[gd_scene load_steps=16 format=3 uid="uid://drioxemoktbtr"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_y4bqu"]
[ext_resource type="Texture2D" uid="uid://dh6nl4ila1rh1" path="res://assets/sprites/player-default.png" id="2_827wv"]
[ext_resource type="Texture2D" uid="uid://dqbisq1u0ap4o" path="res://assets/sprites/hats/hat1.png" id="5_1rxc0"]
[ext_resource type="AudioStream" uid="uid://i7swqqu5w2l1" path="res://assets/sounds/hit01.wav" id="5_jom1l"]
[ext_resource type="PackedScene" uid="uid://dpswufreepa67" path="res://scenes/player/player_hud.tscn" id="5_nwqw0"]
[ext_resource type="AnimationLibrary" uid="uid://dnfnoposj5x18" path="res://assets/animations/plr_general.res" id="6_sov8o"]
[ext_resource type="Texture2D" uid="uid://tcyps2ap7ylu" path="res://assets/sprites/action_icons6.png" id="8_5y0ws"]
[ext_resource type="Texture2D" uid="uid://cyfy6dpw8cq2a" path="res://assets/sprites/chaticons1.png" id="9_tdepr"]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_wd0nf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmedc"]
size = Vector2(40, 40)

[sub_resource type="LabelSettings" id="LabelSettings_5hkom"]
outline_size = 5
outline_color = Color(0.101961, 0.101961, 0.101961, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.603922)

[sub_resource type="CircleShape2D" id="CircleShape2D_7opyn"]
radius = 99.8248

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_mkybe"]
properties/0/path = NodePath(".:manual_move_x")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:manual_move_y")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:has_spawned")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:player_name")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:is_voicing")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:is_running")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:is_paused")
properties/6/spawn = true
properties/6/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ypvdq"]
properties/0/path = NodePath(".:kill_cooldown")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:current_role")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:is_killed")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:position")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Character:scale")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:is_ghost")
properties/5/spawn = true
properties/5/replication_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdog3"]
size = Vector2(615, 421)

[node name="Player" type="CharacterBody2D" groups=["Players"]]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_y4bqu")

[node name="ui" type="CanvasLayer" parent="."]
layer = 0
visible = false

[node name="HUD" parent="ui" node_paths=PackedStringArray("player") instance=ExtResource("5_nwqw0")]
auto_translate_mode = 2
player = NodePath("../..")

[node name="Sounds" type="Node2D" parent="."]

[node name="teleport" type="AudioStreamPlayer2D" parent="Sounds"]
volume_db = 3.0

[node name="hit" type="AudioStreamPlayer2D" parent="Sounds"]
volume_db = 9.0
max_distance = 500.0

[node name="hit2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("5_jom1l")
volume_db = 4.0
pitch_scale = 2.5

[node name="voice" type="AudioStreamPlayer2D" parent="Sounds"]
stream = SubResource("AudioStreamGenerator_wd0nf")
autoplay = true
max_distance = 800.0

[node name="voiceinput" type="AudioStreamPlayer" parent="Sounds"]
bus = &"Voice"

[node name="Character" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="Character"]
texture_filter = 1
texture = ExtResource("2_827wv")
hframes = 9
vframes = 3

[node name="Eyes" type="Sprite2D" parent="Character/Body"]
texture_filter = 1
texture = ExtResource("2_827wv")
hframes = 9
vframes = 3
frame = 9

[node name="Mouth" type="Sprite2D" parent="Character/Body"]
texture_filter = 1
texture = ExtResource("2_827wv")
hframes = 9
vframes = 3
frame = 18

[node name="Hat" type="Sprite2D" parent="Character/Body"]
texture = ExtResource("5_1rxc0")

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_tmedc")

[node name="camera" type="Camera2D" parent="."]
process_mode = 3
enabled = false
zoom = Vector2(1.2, 1.2)
position_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("6_sov8o")
}

[node name="username" type="Label" parent="."]
auto_translate_mode = 2
texture_filter = 4
offset_left = -106.0
offset_top = -59.0
offset_right = 109.0
offset_bottom = -33.0
localize_numeral_system = false
text = "Player"
label_settings = SubResource("LabelSettings_5hkom")
horizontal_alignment = 1
vertical_alignment = 1

[node name="use_area" type="Area2D" parent="."]
collision_mask = 3
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="use_area"]
shape = SubResource("CircleShape2D_7opyn")

[node name="PlayerSyncer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_mkybe")
visibility_update_mode = 1

[node name="impostor_icon" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(20, 19)
scale = Vector2(0.351875, 0.351875)
texture = ExtResource("8_5y0ws")

[node name="ServerSyncer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ypvdq")
visibility_update_mode = 1

[node name="view_area" type="Area2D" parent="."]
collision_mask = 3
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="view_area"]
visible = false
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_kdog3")

[node name="voice_icon" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.6)
texture_filter = 1
position = Vector2(-20, 17)
scale = Vector2(0.4, 0.4)
texture = ExtResource("9_tdepr")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
